apollo-router/src/uplink/snapshots/apollo_router__uplink__test__stream_from_uplink_error_retry.snap
---
source: apollo-router/src/uplink/mod.rs
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Err: "uplink error: code=RETRY_LATER message=error message"
- Ok: "result QueryResult { name: \"ok\", ordering: 1 }"

