apollo-router/src/uplink/snapshots/apollo_router__uplink__test__stream_from_uplink_failed_from_all.snap
---
source: apollo-router/src/uplink/mod.rs
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Err: fetch failed from all endpoints

