apollo-router/src/uplink/snapshots/apollo_router__uplink__test__stream_from_uplink_invalid.snap
---
source: apollo-router/src/uplink/mod.rs
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Err: "uplink error: code=INVALID_ENTITLEMENT message=invalid entitlement: InvalidToken"

