apollo-router/src/uplink/snapshots/apollo_router__uplink__test__stream_from_uplink_unchanged.snap
---
source: apollo-router/src/uplink/mod.rs
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Ok: response
- Ok: response

