apollo-router/src/uplink/snapshots/apollo_router__uplink__test__stream_from_uplink_unchanged_error.snap
---
source: apollo-router/src/uplink/mod.rs
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Ok: "result QueryResult { name: \"ok\", ordering: 1 }"
- Ok: "result QueryResult { name: \"ok\", ordering: 2 }"
- Ok: "result QueryResult { name: \"ok\", ordering: 3 }"

