apollo-router/src/uplink/snapshots/apollo_router__uplink__test__stream_with_ordering_skip_epoch.snap
---
source: apollo-router/src/uplink/mod.rs
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Ok: "result QueryResult { name: \"ok\", ordering: 1 }"

