apollo-router/src/uplink/snapshots/apollo_router__uplink__test__stream_with_ordering_skip_old.snap
---
source: apollo-router/src/uplink/mod.rs
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Ok: "result QueryResult { name: \"ok\", ordering: 2 }"
- Ok: "result QueryResult { name: \"ok\", ordering: 3 }"

